tarmac/new_pattern24/kubernetes/applications/mpt/overlays/environments/qa/app-organization-grpc-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:071766652168:certificate/ca119fb6-99bc-4f92-9754-20efa05cb39e
    alb.ingress.kubernetes.io/group.name: mpt
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 7004}]'
    alb.ingress.kubernetes.io/ssl-policy: REPLACE
    alb.ingress.kubernetes.io/tags: Environment=prod,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
  name: app-organization-grpc-service
spec:
  ingressClassName: alb
  rules:
  - host: grpc.cliniciannexus.com
    http:
      paths:
      - backend:
          service:
            name: app-organization-grpc-service
            port:
              name: grpc
        path: /
        pathType: Prefix
